fix: 현재 위치 기반으로 주변 사람에서 강아지로 변경